app/assets/stylesheets/application.css
/*
*= require_self
*= require colorbox
*= require uploadify
*= require_tree .
*/

body {
  background-color: #FFF;
  font-family: Verdana, Helvetica, Arial;
  font-size: 14px;
  margin: 0;
}

hr#big {
    margin: 30px 0px 30px 0px; 
}

a {
  color: #1B97F2;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

a img {
  border: none;
}

h1 {
  font-size: 24px;
}

h2 {
  font-size: 18px;
}

h3 {
  font-size: 14px;
}

h4 {
  font-size: 12px;
}

.clear {
  clear: both;
}

ul {
  margin: 4px 0;
  padding-left: 17px;
}

ul.horizontal {
  list-style: none;
  margin: 0;
  padding: 0;
}

ul.horizontal li {
  margin: 0;
  padding: 0;
  float: left;
}

#flash_notice, #flash_alert {
  padding: 10px 0;
  text-align: center;
  color: #FFF;
}

#flash_notice {
  background-color: #267923;
}

#flash_alert {
  background-color: #871F22;
}

#flash_notice a, #flash_alert a {
  color: #FFF;
}

.field {
  margin: 10px 0;
}

.special_email_field {
  display: none;
}

label {
  display: block;
}

label.check_box {
  display: inline;
}


/*** ERRORS ***/

.field_with_errors {
  display: inline;
}

.error_messages {
  width: 400px;
  border: 2px solid #CF0000;
  padding: 0px;
  padding-bottom: 12px;
  margin: 20px 0;
  background-color: #f0f0f0;
  font-size: 12px;
}

.error_messages h2 {
  text-align: left;
  font-weight: bold;
  padding: 5px 10px;
  font-size: 12px;
  margin: 0;
  background-color: #c00;
  color: #fff;
}

.error_messages p {
  margin: 8px 10px;
}

.error_messages ul {
  margin: 0;
  margin-left: 10px;
}


/*** SECTIONS ***/

#top {
  position: relative;
}

#top .logo {
  margin: 40px 0px 25px 100px;  
}

#top .logo .tagline {
  font-weight: bold; 
  text-shadow: 0px 1px #777; 
  margin-top: 4px; 
}

#top .account-nav {
  position:absolute;   
  text-align: right; 
  bottom: 70px; 
  right: 100px; 
}

#top .account-nav a#username {
  float:right; 
  font-size: 18px; 
}

#top .account-nav img#avatar {
  float:right; 
  width: 36px; 
  height: 36px; 
  margin-left: 8px; 
}

#top .subscribe {
  position: absolute;
  bottom: 10px;
  right: 100px;
}

#top .subscribe li {
  position: relative;
  margin-left: 8px;
  font-size: 12px;
}

#top .subscribe li .name {
  display: none;
}

#top .subscribe li:hover .name {
  display: block;
  position: absolute;
  top: -22px; left: -84px; width: 200px;
  color: #000;
  text-align: center;
}

#nav_bar {
  position: relative;
  padding: 8px 100px;
  background-color: #333;
  border-top: solid 1px #FFF;
  background: -webkit-gradient(linear, left top, left bottom, from(#61B5D5), to(#1B97F2));
  background: -moz-linear-gradient(top,  #61B5D5, #1B97F2);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#61B5D5', endColorstr='#1B97F2');
  border-bottom: solid 5px #E98C08;
  margin-bottom: 15px;
}

#nav_bar .nav {
  position:absolute; 
  right: 92px; 
  bottom: -5px; 
}

#nav_bar .nav li {
  color: black;
  display: block;
  z-index: 100;
  padding: 10px 8px 8px 8px;
  margin-right: 8px; 
  margin-bottom: 5px; 
  text-transform: uppercase;
}

#nav_bar .nav li.active {  
  margin-bottom: 0px;     
  border-bottom: 5px solid #000;  
}

#nav_bar .nav li a {
  padding: 4px; 
  color: white; 
}

#nav_bar .nav a:hover {
  color: #EEE; 
  text-decoration:none; 
}

#nav_bar .nav li:hover {  
  margin-bottom: 0px; 
  border-bottom: 5px solid #000; 
}

#main {
  padding-top: 15px;
  max-width: 1500px;
}

#footer {
  clear: both;
  font-size: 11px;
  text-align: center;
  padding: 25px 0;
  color: #555;
}

.content {
  margin: 0 100px;
}

.content {
  position: relative;
}

.actions {
  margin: 8px 0;
}

.actions a {
  padding: 3px 8px 2px 8px;
  font-size: 12px;
  color: #000;
  border: 1px solid #999;
  border-radius: 5px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  background: #DDD;
  background: -webkit-gradient(linear, left top, left bottom, from(#F5F5F5), to(#DDD));
  background: -moz-linear-gradient(top,  #F5F5F5, #DDD);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#F5F5F5', endColorstr='#DDD');
  text-decoration: none;
}


/*** EPISODES ***/

.episodes {
  margin-right: 200px;
}

.new {    
  width: 40px;
  height: 40px;
  line-height: 40px; 
  font-weight: bold;  
  font-size: 14px; 
  color: white;  
  text-align: center;
  position: absolute;
  top: -15px;
  left: -15px;
  box-shadow: 0px 0px 3px 1px #9a9a9a;
  background-color: #E98C08;  
  border-radius: 20px;
}

.unreleased {
  color: #D00;
  font-weight: bold;
  padding-left: 5px;
}

.episodes h2 .remove {
  font-size: 14px;
  font-weight: normal;
}

.episodes img#protected, .episode img#protected {
  position:relative; 
  float:left; 
  padding: 7px 4px 7px 4px;
}

#episode h1 img#protected {
  padding: 0px 5px 1px 0px; 
}

.full .episode {
  padding-bottom: 18px;
  border-bottom: solid 1px #E5E5E5;
  margin-bottom: 20px;
  position: relative; 
}

.full .screenshot {
  float: left;
}

.screenshot img {
  border: solid 1px #999;
  display: block;
}

.full .main {
  margin-left: 215px;
}

.full .info {
  color: #999;
  font-size: 12px;
}

.full .number {
  text-transform: uppercase;
  font-weight: bold;
}

.full h2, .episode h2 a {
  color: #E98C08;
}

.full h2 {
  margin: 3px 0;
}

.full .description {
  margin-bottom: 17px;
}

.full .stats {
  font-size: 11px;
  color: #777;
  font-weight: normal;  
  padding-left: 5px;   
  position:absolute; 
  bottom: 18px;   
}

.full .stats a {
  color: #777;
}

.full .stats .continue {
  margin: 0 7px 0 0;
  padding: 0 0 0 15px;
  background: url('/assets/icons/continue.gif') no-repeat;   
}

.full .stats .comments {
  margin: 0 7px 0 0;
  padding: 0 0 0 15px;
  background: url('/assets/icons/comment.gif') no-repeat;   
}
/* ... */

